Added new products that started to use EDS
New products that adapted Earnware Design System are Earnlink Plugin and Support.Earnware.com support center.

--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
 					</li>
 					<li class="my-2">
 						<button class="btn d-inline-flex align-items-center collapsed" data-bs-toggle="collapse" aria-expanded="false" data-bs-target="#forms-collapse" aria-controls="forms-collapse">Forms</button>
-						<ul class="list-unstyled ps-3 collapse show" id="forms-collapse">
+						<ul class="list-unstyled ps-3 collapse" id="forms-collapse">
 							<li><a class="d-inline-flex align-items-center rounded" href="#overview">Overview</a></li>
 							<li><a class="d-inline-flex align-items-center rounded" href="#earnware-forms">Earnware Forms</a></li>
 							<li><a class="d-inline-flex align-items-center rounded" href="#disabled-forms">Disabled forms</a></li>
