--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="http://s3.amazonaws.com/new.ewfiles.com/07-13-20-Earnware-Favicon-Light.png">
 		<title>Earnware Design System</title>
 		<!-- Bootstrap core CSS --> 
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<!-- Custom styles for presentation -->
 		<link href="css/ew-styles-presentation.css" rel="stylesheet">
 		<!-- Custom styles for this template -->
