--- a/Index.html
+++ b/Index.html
@@ -21,12 +21,12 @@
 		</style>
 	</head>
 	<body class="bg-light">
-		<header class="bd-header bg-light d-flex align-items-stretch">
-			<div class="container-fluid d-flex align-items-center">
-				<h1 class="d-flex align-items-center fs-4">
-					<a class="navbar-brand mt-1 ms-1 me-1 mb-1 pb-0" href="javascript:void(0)"><img src="Earnware-Logo-Design-System.svg" width="100%" style="max-width: 175px;"></a>
-				</h1>
-			</div>
+		<header class="bd-header bg-light d-flex align-items-stretch"> 
+			 <div class="container-fluid mt-2 ms-1 me-1 mb-2 pb-0">
+			    <a class="navbar-brand " href="#">
+			      <img src="Earnware-Logo-Design-System.svg" width="100%" style="max-width: 175px;">
+			    </a>
+			  </div>
 		</header>
 		<aside class="bd-aside sticky-xl-top text-muted align-self-start mb-3 mb-xl-5 px-2">
 			<nav class="small mt-3" id="toc">
@@ -2120,7 +2120,7 @@
 										</ul>
 										<form class="d-flex">
 											<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-											<button class="btn btn-outline-dark" type="submit">Search</button>
+											<button class="btn btn-secondary" type="submit">Search</button>
 										</form>
 									</div>
 								</div>
@@ -2160,7 +2160,7 @@
 										</ul>
 										<form class="d-flex">
 											<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-											<button class="btn btn-outline-light" type="submit">Search</button>
+											<button class="btn btn-secondary" type="submit">Search</button>
 										</form>
 									</div>
 								</div>
@@ -2172,7 +2172,7 @@
 											<ul class="nav flex-column">
 												<li class="nav-item p-2 bg-dodger-blue"> 
 													<a class="nav-link text-white-50" href="javascript:void(0)">
-													<img src="Earnware-Logo-White.svg" width="100%" style="max-width: 175px;">
+													<img src="Earnware-Logo-White.svg" width="100%" style="height: 30px; width: 175px;">
 													</a>
 												</li>
 												<li class="nav-item">
@@ -2291,7 +2291,7 @@
 											<ul class="nav flex-column">
 												<li class="nav-item p-2 bg-dodger-blue"> 
 													<a class="nav-link text-black-50" href="javascript:void(0)">
-													<img src="Earnware-Logo-White.svg" width="100%" style="max-width: 175px;">
+													<img src="Earnware-Logo-White.svg" width="100%" style="height: 30px; width: 175px;">
 													</a>
 												</li>
 												<li class="nav-item">
